<resources>
    <string name="app_name">Baby Needs</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add_item">ADD ITEM</string>
    <string name="enter_item">Enter Item</string>
    <string name="quantity">Quantity</string>
    <string name="color">Color</string>
    <string name="size">Size</string>
    <string name="save">Save</string>
    <string name="are_you_sure">Are you Sure</string>
    <string name="no">NO</string>
    <string name="yes">Yes</string>

    <string name="edit_time">Edit Item</string>
    <string name="update_text">Update</string>
</resources>
