<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_item"
                android:textSize="18sp"
                android:layout_centerHorizontal="true"/>

            <EditText
                android:id="@+id/babyItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title"
                android:hint="@string/enter_item" />

            <EditText
                android:id="@+id/itemQuantity"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/babyItem"
                android:hint="@string/quantity" />

            <EditText
                android:id="@+id/itemColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/itemQuantity"
                android:hint="@string/color" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/itemSize"
                android:inputType="number"
                android:layout_below="@+id/itemColor"
                android:hint="@string/size"/>

            <Button
                android:id="@+id/save_button"
                android:text="@string/save"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_below="@+id/itemSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>